--- a/settings.json
+++ b/settings.json
@@ -1,24 +1,26 @@
 {
     "version": "v0.9.7-10",
-    "chat_model_provider": "openrouter",
-    "chat_model_name": "upstage/solar-pro-3:free",
-    "chat_model_api_base": "",
+    "chat_model_provider": "ollama",
+    "chat_model_name": "gemma3:4b",
+    "chat_model_api_base": "http://host.docker.internal:11434",
     "chat_model_kwargs": {
-        "temperature": "0"
+        "temperature": "0",
+        "num_ctx": 30000
     },
-    "chat_model_ctx_length": 100000,
+    "chat_model_ctx_length": 30000,
     "chat_model_ctx_history": 0.7,
     "chat_model_vision": true,
     "chat_model_rl_requests": 0,
     "chat_model_rl_input": 0,
     "chat_model_rl_output": 0,
-    "util_model_provider": "openrouter",
-    "util_model_name": "upstage/solar-pro-3:free",
-    "util_model_api_base": "",
+    "util_model_provider": "ollama",
+    "util_model_name": "gemma3:4b",
+    "util_model_api_base": "http://host.docker.internal:11434",
     "util_model_ctx_length": 100000,
     "util_model_ctx_input": 0.7,
     "util_model_kwargs": {
-        "temperature": "0"
+        "temperature": "0",
+        "num_ctx": 30000
     },
     "util_model_rl_requests": 0,
     "util_model_rl_input": 0,
@@ -29,15 +31,16 @@
     "embed_model_kwargs": {},
     "embed_model_rl_requests": 0,
     "embed_model_rl_input": 0,
-    "browser_model_provider": "openrouter",
-    "browser_model_name": "upstage/solar-pro-3:free",
-    "browser_model_api_base": "",
+    "browser_model_provider": "ollama",
+    "browser_model_name": "gemma3:4b",
+    "browser_model_api_base": "http://host.docker.internal:11434",
     "browser_model_vision": true,
     "browser_model_rl_requests": 0,
     "browser_model_rl_input": 0,
     "browser_model_rl_output": 0,
     "browser_model_kwargs": {
-        "temperature": "0"
+        "temperature": "0",
+        "num_ctx": 30000
     },
     "browser_http_headers": {},
     "memory_recall_enabled": true,
