--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,13 @@
 {
     "version": "v0.9.7-10",
-    "chat_model_provider": "ollama",
-    "chat_model_name": "gemma3:4b",
-    "chat_model_api_base": "http://host.docker.internal:11434",
+    "chat_model_provider": "anthropic",
+    "chat_model_name": "anthropic/claude-haiku-4.5",
+    "chat_model_api_base": "",
     "chat_model_kwargs": {
         "temperature": "0",
-        "num_ctx": 30000
+        "num_ctx": 200000
     },
-    "chat_model_ctx_length": 30000,
+    "chat_model_ctx_length": 200000,
     "chat_model_ctx_history": 0.7,
     "chat_model_vision": true,
     "chat_model_rl_requests": 0,
